# music_analytics

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt
functions/: artist_data.py  dbfuncs.py  lyrics.py  scraping.py  utils.py
projects/compare_artist_followers_listeners/: 0_get_data.py  1_compare_artist_followers_listeners.py
projects/compare_genre_pushedness/: 0_get_data.py  1_compare_genre_pushedness.py  README.md
projects/compare_lyrics/: 0_get_data.py  0_get_lyrics.py  1_find_similar_artist.py  1_visualise_artists.py  README.md
projects/compare_platform_popularity/: 0_get_data.py  1_compare_platform_popularity.py  README.md  compare_platform_popularity.py
projects/compare_platform_similarity/: 0_get_data.py  1_compare_platform_similarity.py  README.md
projects/match_festivals/: 0_get_data.py  1_match_festival.py  1_visualise_twins.py  README.md  festival_recommender.py
projects/predict_releases/: predict_releases.py
projects/visualise_releases/: predict_future_releases.py
projects/visualise_similar_artists/: visualise_similar_artists.py
projects/visualise_tours/: 0_get_data.py  0_get_data_concerts-metal.py  0_get_data_setlistfm.py  1_visualise_tours.py  README.md  retrieve_setlists.py  visualise_tours.py
