[project]
name = "music_analytics"
version = "0.0.1"
description = "A collection of scripts for analysing music data"

[tool.ruff]
line-length = 88
target-version = "py311"
preview = true
select = ["E", "F", "I", "B", "UP", "C90", "N", "D", "PL", "RUF"]
ignore = ["D100", "D203", "D213", "D417", "E266", "E402", "E501", "N803", "PLR0913", "PLR0914", "PLR0917", "RUF015"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = 88

[tool.ruff.lint.isort]
known-first-party = ["your_package_name"]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.lint.pydocstyle]
convention = "google"
